--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,28 @@
   </head>
 
   <body>
+    <header>
+      <% if request.fullpath.include? "/admin" %>
+  <!--//admin側のheaderを返す-->
+        <% if admin_signed_in? %>
+         <li>商品一覧</li>
+         <li>
+          <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+         </li>
+        <% else %>
+         <li>
+          <%= link_to "新規登録", new_admin_registration_path %>
+         </li>
+         <li>
+          <%= link_to "ログイン", new_admin_session_path %>
+         </li>
+        <% end %>
+      <% else %>
+  <!--// user側のheaderを返す-->
+        <p>user header</p>
+      <% end %>
+     
+    </header>
     <%= yield %>
   </body>
 </html>
