--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,7 +1,15 @@
 <h1>ジャンル一覧・追加</h1>
 
-<%= form_with model: @genre.new do |f| %>
+<%= form_with model: @genre, url: "/admin/genres" do |f| %>
  <h4>ジャンル名</h4>
  <%= f.text_field :name %>
  <%= f.submit '新規登録' %>
+<% end %>
+
+<h4>ジャンル</h4>
+
+<% @genres.each do |genre| %>
+<span><%= genre.name %></span>
+<%= link_to "編集する", edit_admin_genre_path(genre.id) %>
+
 <% end %>
