--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,15 +1,22 @@
 <h1>商品新規登録</h1>
 
-<%= form_with model: @item do |f| %>
+<%= form_with model: @item, url:"/admin/items/new" do |f| %>
  <h4>商品画像</h4>
-  <%= f.file :image, accept: "image/*" %><br>
+  <%= f.file_field :image, accept: "image/*" %>
  <h4>商品名</h4>
-  <%= f.text_field :name %><br>
+  <%= f.text_field :name %>
  <h4>商品説明</h4>
-  <%= f.text_area :introduction %><br>
+  <%= f.text_area :introduction %>
  <h4>ジャンル</h4>
-<!--<h4>税抜き価格</h4>　円-->
-<!--<h4>販売ステータス</h4>　販売中　販売中止　ラジオぼたん-->-->
- <%= f.submit '新規登録' %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+ <h4>税抜き価格</h4>
+  <%= text_field_tag "price", "1000" %>円
+ <h4>販売ステータス</h4>
+　<%= f.radio_button :is_active, true %>
+　<%= f.label :is_active_true, "販売中" %>
+　<%= f.radio_button :is_active, false %>
+　<%= f.label :is_active_false, "販売停止中" %><br>
+ 
+  <%= f.submit '新規登録' %>
 <% end %>
 
