--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Admin::Items#index</h1>
-<p>Find me in app/views/admin/items/index.html.erb</p>
+<h1>商品一覧</h1>
+
+<table>
+    <% @items.each do |item| %>
+    <thead>
+     <tr>
+       <th>商品ID</th>
+       <th>商品名</th>
+       <th>税抜価格</th>
+       <th>ジャンル</th>
+       <th>ステータス</th>
+     </tr>
+    </thead>
+    <tbody>
+     <tr>
+        <td><%= item.id %></td>
+        <td><%= link_to admin_item_url(item.id) do %>
+            <p><%= item.name %></p>
+        <% end %></td>
+        <td><%= item.price %></td>
+        <td><%= item.genre_id ? '販売中': '販売停止中' %></td>
+        <td><%= item.is_active %></td>
+     </tr>
+    </tbody>
+    <% end %>
+</table>
