--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,2 +1,36 @@
-<h1>Admin::Items#edit</h1>
-<p>Find me in app/views/admin/items/edit.html.erb</p>
+<h1>商品編集</h1>
+
+<%= form_with model: @item, url: admin_item_path(@item.id) do |f| %> 
+ 
+ <table>
+  <tr>
+   <th>商品画像</th>
+   <td><%= f.file_field :image, accept: "image/*" %></td>
+  </tr>
+  <tr>
+    <th>商品名</th>
+    <td><%= f.text_field :name %></td>
+  </tr>
+  <tr>
+   <th>商品説明</th>
+    <td><%= f.text_area :introduction %></td>
+  </tr>
+  <tr>
+    <th>ジャンル</th>
+    <td><%= f.collection_select :genre_id, Genre.all, :id, :name %></td>
+  </tr>
+  <tr>
+   <th>販売価格</th>
+   <td><%= f.text_field :price %>円</td>
+  </tr>
+  <tr>
+   <th>販売ステータス</th>
+   <td><%= f.radio_button :is_active, true %>
+　     <%= f.label :is_active_true, "販売中" %>
+　     <%= f.radio_button :is_active, false %>
+　     <%= f.label :is_active_false, "販売停止中" %></td>
+  </tr>
+</table>
+ 
+  <%= f.submit '変更を保存' %>
+<% end %>
