--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,64 @@
-<h2>新規登録</h2>
+<h2>新規会員登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label "名前" %>
+    <%= f.label "(姓)" %>
+    <%= f.text_field :last_name %>
+    <%= f.label "(名)"%>
+    <%= f.text_field :first_name %>
+  </div>
+  
+  <div>
+    <%= f.label "フリガナ" %>
+    <%= f.label "(セイ)" %>
+    <%= f.text_field :last_name_kana %>
+    <%= f.label "(メイ)" %>
+    <%= f.text_field :first_name_kana %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %>
+    <%= f.label "メールアドレス" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+  
+  <div>
+    <%= f.label "郵便番号(ハイフンなし)" %>
+    <%= f.text_field :postal_code %>
+  </div>
+  
+  <div>
+    <%= f.label "住所" %>
+    <%= f.text_field :address %>
+  </div>
+  
+  <div>
+    <%= f.label "電話番号（ハイフンなし)" %>
+    <%= f.text_field :telephone_number %>
+  </div>
+
+  <div class="field">
+    <%= f.label "パスワード(6文字以上）" %>
+    <!--< if @minimum_password_length %>-->
+    <!--<em>(<= @minimum_password_length %> characters minimum)</em>-->
+    <!--< end %>-->
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label "パスワード（確認用）" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "ログイン" %>
+    <%= f.submit "新規登録" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div>既に登録済みのかた</div>
+<%=link_to "こちら", customer_session_path %>
+からログインしてください。
+
+<!--<= render "devise/shared/links" %>-->
