--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2>新規会員登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_with model: @customer, url: "/customers", method: :post do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
@@ -48,7 +48,7 @@
   </div>
 
   <div class="field">
-    <%= f.label "パスワード（確認用）" %><br />
+    <%= f.label "パスワード（確認用）" %>
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
