Update_public_itemspage

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -18,8 +18,8 @@
             <p><%= item.name %></p>
         <% end %></td>
         <td><%= item.price %></td>
-        <td><%= item.genre_id ? '販売中': '販売停止中' %></td>
-        <td><%= item.is_active %></td>
+        <td><%= item.genre.name %></td>
+        <td><%= item.is_active ? '販売中':'販売停止中' %></td>
      </tr>
     </tbody>
     <% end %>
