--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2>新規会員登録</h2>
 
-<%= form_with model: @customer, url: "/customers", method: :post do |f| %>
+<%= form_with model: @customer, url: customer_registration_path, method: :post do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
@@ -41,7 +41,7 @@
 
   <div class="field">
     <%= f.label "パスワード(6文字以上）" %>
-    <!--< if @minimum_password_length %>-->
+    <!--<= if @minimum_password_length %>-->
     <!--<em>(<= @minimum_password_length %> characters minimum)</em>-->
     <!--< end %>-->
     <%= f.password_field :password, autocomplete: "new-password" %>
