--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -16,7 +16,7 @@
             <td><%= customer.id %></td>
             <td><%= customer.last_name %><%=customer.first_name %></td>
             <td><%= customer.email %></td>
-            <td><%=customer.is_deleted ? '有効': '退会' %></td>
+            <td><%=customer.is_deleted ? '退会': '有効' %></td>
         </tr>
        <% end %>
     </tbody>
