--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -21,8 +21,12 @@
     
     <% @items.each do |item| %>
     
-    <%= item.image %>
-    <%= item.name %>
+    <div>
+    <%= image_tag item.image %><br>
+    <%= item.name %><br>
     <%= item.price %>
+    </div>
     
     <% end %>
+    
+    <%= link_to '全ての商品を見る＞', items_path %>
