--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,46 @@
-<h1>Admin::Customer#edit</h1>
-<p>Find me in app/views/admin/customer/edit.html.erb</p>
+<h1><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h1>
+
+<%= form_with model: @customer, url: admin_customer_path(@customer.id) do |f| %> 
+ 
+ <table>
+  <tr>
+   <th>会員ID</th>
+   <td><%= @customer.id %></td>
+  </tr>
+  <tr>
+    <th>氏名</th>
+    <td><%= f.text_field :last_name %>
+        <%= f.text_field :first_name %></td>
+  </tr>
+  <tr>
+   <th>フリガナ</th>
+    <td><%= f.text_field :last_name_kana %>
+        <%= f.text_field :first_name_kana %></td>
+  </tr>
+  <tr>
+    <th>郵便番号</th>
+    <td><%= f.text_field :postal_code %></td>
+  </tr>
+  <tr>
+   <th>住所</th>
+   <td><%= f.text_field :address %></td>
+  </tr>
+   <tr>
+   <th>電話番号</th>
+   <td><%= f.text_field :telephone_number %></td>
+  </tr>
+  <tr>
+   <th>メールアドレス</th>
+   <td><%= f.text_field :email %></td>
+  </tr>
+  <tr>
+   <th>会員ステータス</th>
+   <td><%= f.radio_button :is_deleted, true %>
+　     <%= f.label :is_deleted_true, "退会" %>
+　     <%= f.radio_button :is_deleted, false %>
+　     <%= f.label :is_deleted_false, "有効" %></td>
+  </tr>
+</table>
+ 
+  <%= f.submit '変更を保存' %>
+<% end %>
