--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -14,9 +14,13 @@
         <% @customers.each do |customer| %>
         <tr>
             <td><%= customer.id %></td>
-            <td><%= customer.last_name %><%=customer.first_name %></td>
+            <td>
+             <%= link_to admin_customer_path(customer.id) do %>
+              <%= customer.last_name %><%=customer.first_name %>
+             <% end %>
+            </td>
             <td><%= customer.email %></td>
-            <td><%=customer.is_deleted ? '退会': '有効' %></td>
+            <td><%= customer.is_deleted ? '有効': '退会' %></td>
         </tr>
        <% end %>
     </tbody>
