--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -21,7 +21,7 @@
  </tr>
  <tr>
   <th>販売ステータス</th>
-  <td><%= @item.is_active %></td>
+  <td><%= @item.is_active ? '販売中' : '販売停止中' %></td>
  </tr>
 </table>
  
