--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -20,7 +20,7 @@
              <% end %>
             </td>
             <td><%= customer.email %></td>
-            <td><%= customer.is_deleted ? '有効': '退会' %></td>
+            <td><%= customer.is_deleted ? '退会': '有効' %></td>
         </tr>
        <% end %>
     </tbody>
