--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -3,8 +3,8 @@
 <% @items.each do |item| %>
 
 <div>
-    <%=link_to items_path(item.id) do %>
-     <%= image_tag item.image %>
+    <%=link_to item_path(item.id) do %>
+     <%= image_tag item.get_image(200,200) %>
     <% end %><br>
     <%= item.name %><br>
     <%= item.price %>
