--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,13 +1,18 @@
-<!--<= form_with model: @cart_item, url: cart_items_path, do |f| %>-->
+<!--< if @item.is_active == TRUE %> 商品販売中の場合-->
 
-<%= image_tag @item.image, (10,20) %>
+ <%= form_with model: @cart_item, url: cart_items_path, method: :post do |f| %>
 
-<div>
-<%= @item.name %><br>
+  <%= image_tag @item.get_image(100,200) %>
 
-<%= @item.introduction %><br>
+  <div>
+   <%= @item.name %><br>
+   <%= @item.introduction %><br>
+   ¥<%= @item.price %>(税込)
+  </div>
 
-¥<%= @item.price %>(税込)
-
-
-</div>
+  <%= f.select :amount, [1,2,3,4,5,6,7,8,9,10] %>
+  <%= f.hidden_field :item_id, :value => @item.id %>
+  <%= f.submit "カートに入れる" %>
+ <% end %>
+<!--< end %>-->
+    
