--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,2 +1,44 @@
-<h1>Public::Orders#new</h1>
-<p>Find me in app/views/public/orders/new.html.erb</p>
+<h1>注文情報入力</h1>
+
+<%= form_with model: @order, url: orders_confirm_path, method: :post do |f| %>
+ <div>
+     <p>支払い方法</p>
+      <%= f.radio_button :payment, Order.payments.key(0) %>
+　    <%= f.label :payment_credit_card, Order.payments_i18n[:credit_card] %><br>
+      <%= f.radio_button :payment, Order.payments.key(1) %>
+　    <%= f.label :payment, Order.payments_i18n[:transfer] %>
+ </div>
+ 
+     <p>お届け先</p>
+     <div>
+         <%= f.radio_button :address, current_customer.address %>
+         <%= f.label :address, "ご自身の住所" %><br>
+　       <%= current_customer.postal_code %>
+　       <%= current_customer.address %><br>
+　       <%= current_customer.last_name %>
+　       <%= current_customer.first_name %>
+     </div>
+     <div>
+         <%= f.radio_button :address, current_customer.address %>
+         <%= f.label :address, "登録済住所から選択" %><br>
+         <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
+     </div>
+     <div>
+         <%= f.radio_button :address, current_customer.address %>
+         <%= f.label :address, "新しいお届け先" %><br>
+         <tr>
+             <th>郵便番号（ハイフンなし）</th>
+             <td><%= f.text_field :shipping_postal_code %></td>
+         </tr><br>
+         <tr>
+             <th>住所</th>
+             <td><%= f.text_field :shipping_address %></td>
+         </tr><br>
+         <tr>
+             <th>宛名</th>
+             <td><%= f.text_field :shipping_name %></td>
+         </tr><br>
+     </div>
+　    
+　    <%= submit_tag "確認画面へ進む" %> 
+<% end %>
