Update_cartpage_orderpage

--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -10,9 +10,42 @@
         </tr>
     </thead>
     <tbody>
-        <% @orders.each do |order| %>
+        <% @cart_items.each do |order| %>
         <tr>
-            <td><%= order.cart_item.item.name %> </td>
+            <td><%= image_tag order.item.get_image(100,200) %>
+                <%= order.item.name %> 
+            </td>
+            <td><%= order.item.with_tax_price %></td>
+            <td><%= order.amount %></td>
+            <td><%= order.subtotal %></td>
         </tr>
     </tbody>
+<table>
+   <tr>
+       <th>送料</th>
+       <td><%#= order.shipping_cost %></td>
+   </tr>
+   <tr>
+       <th>商品合計</th>
+       <% total = order.subtotal %>
+       <td><%= total %></td>
+   </tr>
+   <tr>
+       <th>請求金額</th>
+       <td><%= total + 100 %></td>
+   </tr>
 </table>
+    <% end %>
+</table>
+
+<div>支払い方法</div>
+<%#= @order.payment_method %>
+
+
+<div>お届け先</div>
+
+<%= form_with model: @order, url: orders_complete_path, method: :post do |f| %>
+
+<%= submit_tag "注文を確定する" %>
+
+<% end %>
