--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -22,14 +22,14 @@
      <td><%= cart_item.item.name %></td>
      <td><%= cart_item.item.with_tax_price %></td>
      <td>
-      <%#= form_with model: cart_item, url: cart_item_path(cart_item), method:  :patch do |f| %>
-       <%#= f.number_field :amount, ,min: 1, max: 10, id: "amount_cart" %>
-       <%#= f.submit "変更" %>
-     <%#= cart_items.amount %>
-      <%# end %>
+      <%= form_with model: cart_item, url: cart_item_path(cart_item), method:  :patch do |f| %>
+       <%= f.select :amount, *[1..10] %>
+       <%= f.submit "変更" %>
+       <%#= @cart_items.amount %>
+      <% end %>
      </td>
      <td>
-      <%= cart_item.item.subtotal %>
+      <%= cart_item.subtotal %>
       
      </td>
      <td>
