--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -10,7 +10,7 @@
    ¥<%= @item.price %>(税込)
   </div>
 
-  <%= f.select :amount, [1,2,3,4,5,6,7,8,9,10] %>
+  <%= f.select :amount, *[1..10] %>
   <%= f.hidden_field :item_id, :value => @item.id %>
   <%= f.submit "カートに入れる" %>
  <% end %>
