--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -3,29 +3,29 @@
 <%= form_with model: @order, url: orders_confirm_path, method: :post do |f| %>
  <div>
      <p>支払い方法</p>
-      <%= f.radio_button :payment, Order.payments.key(0) %>
-　    <%= f.label :payment_credit_card, Order.payments_i18n[:credit_card] %><br>
-      <%= f.radio_button :payment, Order.payments.key(1) %>
-　    <%= f.label :payment, Order.payments_i18n[:transfer] %>
+      <%= f.radio_button :payment_method, Order.payments.key(0) %>
+　    <%= f.label :payment_method, Order.payments_i18n[:credit_card] %><br>
+      <%= f.radio_button :payment_method, Order.payments.key(1) %>
+　    <%= f.label :payment_method, Order.payments_i18n[:transfer] %>
  </div>
  
      <p>お届け先</p>
      <div>
-         <%= f.radio_button :address, current_customer.address %>
-         <%= f.label :address, "ご自身の住所" %><br>
+         <%= f.radio_button :address_select, 0 %>
+         <%= f.label :address_select, "ご自身の住所" %><br>
 　       <%= current_customer.postal_code %>
 　       <%= current_customer.address %><br>
 　       <%= current_customer.last_name %>
 　       <%= current_customer.first_name %>
      </div>
      <div>
-         <%= f.radio_button :address, current_customer.address %>
-         <%= f.label :address, "登録済住所から選択" %><br>
+         <%= f.radio_button :address_select, 1 %>
+         <%= f.label :address_select, "登録済住所から選択" %><br>
          <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
      </div>
      <div>
-         <%= f.radio_button :address, current_customer.address %>
-         <%= f.label :address, "新しいお届け先" %><br>
+         <%= f.radio_button :address_select, 2 %>
+         <%= f.label :address_select, "新しいお届け先" %><br>
          <tr>
              <th>郵便番号（ハイフンなし）</th>
              <td><%= f.text_field :shipping_postal_code %></td>
