--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -3,10 +3,10 @@
 <%= form_with model: @order, url: orders_confirm_path, method: :post do |f| %>
  <div>
      <p>支払い方法</p>
-      <%= f.radio_button :payment_method, Order.payments.key(0) %>
-　    <%= f.label :payment_method, Order.payments_i18n[:credit_card] %><br>
-      <%= f.radio_button :payment_method, Order.payments.key(1) %>
-　    <%= f.label :payment_method, Order.payments_i18n[:transfer] %>
+      <%= f.radio_button :payment, Order.payments.key(0) %>
+　    <%= f.label :payment, Order.payments_i18n[:credit_card] %><br>
+      <%= f.radio_button :payment, Order.payments.key(1) %>
+　    <%= f.label :payment, Order.payments_i18n[:transfer] %>
  </div>
  
      <p>お届け先</p>
@@ -15,8 +15,7 @@
          <%= f.label :address_select, "ご自身の住所" %><br>
 　       <%= current_customer.postal_code %>
 　       <%= current_customer.address %><br>
-　       <%= current_customer.last_name %>
-　       <%= current_customer.first_name %>
+　       <%= current_customer.last_name + " " + current_customer.first_name %>
      </div>
      <div>
          <%= f.radio_button :address_select, 1 %>
@@ -40,5 +39,5 @@
          </tr><br>
      </div>
 　    
-　    <%= submit_tag "確認画面へ進む" %> 
+　    <%= f.submit "確認画面へ進む" %> 
 <% end %>
