Update_mypage_orderpage_addresspage

--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,6 +1,6 @@
 <h1>マイページ</h1>
 <h4>登録情報</h4>
-<%= link_to "編集する", edit_customer_path %>
+<%= link_to "編集する", customers_information_edit_path %>
 
 <table>
     <tr>
