--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -1,2 +1,14 @@
-<h1>Public::Customers#confirm</h1>
-<p>Find me in app/views/public/customers/confirm.html.erb</p>
+<%= form_with model: @customer, url: customers_withdrawal_path, method: :patch do |f| %>
+
+<h1>本当に退会しますか？</h1>
+
+<div>
+    退会すると、会員登録情報や<br>
+    これまでの購入履歴が閲覧できなくなります。<br>
+    退会する場合は、「退会する」をクリックしてください。
+</div>
+
+<%= link_to "退会しない", customers_mypage_path %>
+<%= f.submit "退会する" %>
+
+<% end %>
