--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,2 +1,41 @@
-<h1>Public::Customers#edit</h1>
-<p>Find me in app/views/public/customers/edit.html.erb</p>
+<h1>会員情報編集</h1>
+
+<%= form_with model: @customer, url: customers_information_path, method: :patch do |f| %>
+
+<table>
+    <tr>
+        <th>氏名</th>
+        <td>
+            <%= f.text_field :last_name %>
+            <%= f.text_field :first_name %>
+        </td>
+    </tr>
+    <tr>
+        <th>フリガナ</th>
+        <td>
+            <%= f.text_field :last_name_kana %>
+            <%= f.text_field :first_name_kana %>
+        </td>
+    </tr>
+    <tr>
+        <th>郵便番号</th>
+        <td><%= f.text_field :postal_code %></td>
+    </tr>
+    <tr>
+        <th>住所</th>
+        <td><%= f.text_field :address %></td>
+    </tr>
+    <tr>
+        <th>電話番号</th>
+        <td><%= f.text_field :telephone_number %></td>
+    </tr>
+    <tr>
+        <th>メールアドレス</th>
+        <td><%= f.text_field :email %></td>
+    </tr>
+</table>
+
+<%= f.submit "編集内容を保存" %>
+<%= link_to "退会する", customers_confirm_path %>
+
+<% end %>
