--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -19,6 +19,8 @@
             <td><%= order.amount %></td>
             <td><%= order.subtotal %></td>
         </tr>
+         <% @total += order.subtotal %>
+        <% end %>
     </tbody>
 </table>
 <table>
@@ -28,26 +30,23 @@
    </tr>
    <tr>
        <th>商品合計</th>
-       <%# @total +=  order.subtotal %>
-       <td><%#= @total %></td>
+       <td><%= @total %></td>
    </tr>
    <tr>
        <th>請求金額</th>
-       <td><%#= @total + @shipping_cost %></td>
+       <td><%= @total + @shipping_cost %></td>
    </tr>
 </table>
-        <% end %> 
 
 <div>支払い方法</div>
 <%= @order.payment_i18n %>
-
 
 <div>お届け先</div>
 <%= @order.shipping_postal_code + @order.shipping_address + @order.shipping_name %>
 
 <%= form_with model: @order, url: orders_path, method: :post do |f| %>
 
-<%= hidden_field :payment, :value => @order.payment %>
+<%= f.hidden_field :payment, :value => @order.payment %>
 
 <%= f.submit "注文を確定する" %>
 
