--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Public::Orders#index</h1>
-<p>Find me in app/views/public/orders/index.html.erb</p>
+<h1>注文履歴一覧</h1>
+
+<table>
+    <tr>
+        <th>注文日</th>
+        <th>配送先</th>
+        <th>注文商品</th>
+        <th>注文金額</th>
+        <th>ステータス</th>
+        <th>注文詳細</th>
+    </tr>
+    
+ <% @order.each do |order| %>
+ 
+   <tr>
+       <td><%= order.created_at %></td>
+       <td><%= order.address %></td>
+       <td><%= order.item.name %></td>
+       <td><%= order.total_payment %></td>
+       <td><%= order.status %></td>
+       <td><%= link_to "表示する", order_path %></td>
+   </tr>
+ <% end %>
+</table>
