Update_header_adminpage_customer/mypage

--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -35,10 +35,10 @@
   </tr>
   <tr>
    <th>会員ステータス</th>
-   <td><%= f.radio_button :is_deleted, true %>
-　     <%= f.label :is_deleted_true, "退会" %>
-　     <%= f.radio_button :is_deleted, false %>
-　     <%= f.label :is_deleted_false, "有効" %></td>
+   <td><%= f.radio_button :is_deleted, false %>
+　     <%= f.label :is_deleted_true, "有効" %>
+　     <%= f.radio_button :is_deleted, true %>
+　     <%= f.label :is_deleted_false, "退会" %></td>
   </tr>
 </table>
  
