--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,20 +1,2 @@
-<sidber>
-    <thead>
-        <tr>
-            <th>ジャンル検索</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>ケーキ</td>
-            <td>焼き菓子</td>
-            <td>プリン</td>
-            <td>キャンディ</td>
-        </tr>
-    </tbody>
-</sidber>
+<h1>注文履歴一覧</h1>
 
-<h4>ようこそ、ながのCAKEへ！<br>
-このサイトは、ケーキ販売のECサイトになります。<br>
-会員でない方も商品の閲覧はできますが、<br>
-購入には会員登録が必要になります。</h4>
