--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -33,8 +33,8 @@
         <td><%= address.address %></td>
         <td><%= address.name %></td>
         <td>
-            <%= link_to "編集する", edit_address_path %>
-            <%#= link_to "削除する", %>
+            <%= link_to "編集する", edit_address_path(address.id) %>
+            <%= link_to "削除する", address_path(address.id), method: :delete %>
         </td>
     </tr>
     <% end %>
