--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,5 +1,3 @@
-<!--< form_with mode: @customer, url: edit_admin_customer_path(@customer.id) do |f| %>-->
-
 <h1><%= @customer.last_name %>
     <%= @customer.first_name %>さんの会員詳細</h1>
 
@@ -10,15 +8,14 @@
  </tr>
  <tr>
   <th>氏名</th>
-  <td><%= @customer.last_name %></td>
-  <td> </td>
-  <td><%= @customer.first_name %></td>
+  <td>
+    <%= @customer.last_name + "　" + @customer.first_name %>
+  </td>
  </tr>
  <tr>
   <th>フリガナ</th>
-  <td><%= @customer.last_name_kana %></td>
-  <td> </td>
-  <td><%= @customer.first_name_kana %></td>
+  <td><%= @customer.last_name_kana + "　" +  @customer.first_name_kana %>
+  </td>
  </tr>
  <tr>
   <th>郵便番号</th>
@@ -33,11 +30,14 @@
   <td><%= @customer.telephone_number %></td>
  </tr>
  <tr>
+  <th>メールアドレス</th>
+  <td><%= @customer.email %></td>
+ </tr>
+ <tr>
   <th>会員ステータス</th>
   <td><%= @customer.is_deleted ? '退会': '有効' %></td>
  </tr>
 </table>
  
- <%= link_to '編集する', edit_admin_customer_url(@customer.id) %>
- 
-<!--< end %>-->
+ <%= link_to '編集する', edit_admin_customer_path(@customer.id) %>
+ <%= link_to '注文履歴一覧を見る', admin_root_path %>
