--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -14,10 +14,14 @@
  </tr>
  <tr>
   <th>ジャンル</th>
-  <td><%= @item.genre_id %></td>
+  <td><%= @item.genre.name %></td>
  </tr>
  <tr>
   <th>税込価格（税抜価格）</th>
+  <td>
+      <%= @item.with_tax_price %>
+      (<%= @item.price %>)円
+  </td>
  </tr>
  <tr>
   <th>販売ステータス</th>
