--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,27 +12,54 @@
 
   <body>
     <header>
+    
+    <%= link_to "LOGO", root_path %>    
+    
       <% if request.fullpath.include? "/admin" %>
   <!--//admin側のheaderを返す-->
         <% if admin_signed_in? %>
-         <li>商品一覧</li>
          <li>
-          <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+             <%= link_to "商品一覧", admin_items_path %>
+         </li>
+         <li>
+             <%= link_to "会員一覧", admin_customers_path %>
+         </li>
+         <li>
+             <%= link_to "注文履歴一覧", admin_root_path %>
+         </li>
+         <li>
+             <%= link_to "ジャンル一覧", admin_genres_path %>
+         </li>
+         <li>
+             <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
          </li>
         <% else %>
          <li>
-          <%= link_to "新規登録", new_admin_registration_path %>
+             <%= link_to "About", about_path %>
          </li>
          <li>
-          <%= link_to "ログイン", new_admin_session_path %>
+             <%= link_to "商品一覧", items_path %>
+         </li>
+         <li>
+          <%= link_to "新規登録", new_customer_registration_path %>
+         </li>
+         <li>
+          <%= link_to "ログイン", new_customer_session_path %>
          </li>
         <% end %>
       <% else %>
   <!--// user側のheaderを返す-->
-        <p>user header</p>
-        <%= link_to destroy_customer_session_path, method: :delete do %>
-          ログアウト
-        <% end %>
+        <li>
+            <%= link_to "マイページ", customers_mypage_path %>
+        </li>
+        <li>
+            <%= link_to "商品一覧", items_path %>
+        </li>
+        <li>
+            <%= link_to "カート", cart_items_path %>
+        </li>
+        <li>
+            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
       <% end %>
      
     </header>
