--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -18,6 +18,7 @@
        <td><%= order.item.name %></td>
        <td><%= order.total_payment %></td>
        <td><%= order.status %></td>
+       <td><%= order.payment %></td>
        <td><%= link_to "表示する", order_path %></td>
    </tr>
  <% end %>
