update_order_page

--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,20 +1,17 @@
-<h1>注文履歴一覧</h1>
+<h1>注文履歴詳細</h1>
 
-<table>
+<div>購入者</div>
+<div><%#= @order_details.%></div>
+  
     <% @orders.each do |order| %>
-    <thead>
-        <tr>
-            <th>購入日時</th>
-            <th>購入者</th>
-            <th>注文個数</th>
-            <th>注文ステータス</th>
-        </tr>
-    </thead>
-    
     <tbody>
         <tr>
             <td><%= order.created_at %></td>
-            <td></td>
+            <td><%#= order.order_id.customer_1.last_name + " " + order.order_id.customer_1.first_name %></td>
+            <td><%= order.amount%></td>
+            <td><%= order.making_status %></td>
         </tr>
     </tbody>
+    <% end %>
 </table>
+
