--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -10,7 +10,7 @@
         <th>注文詳細</th>
     </tr>
     
- <% @order.each do |order| %>
+ <% @orders.each do |order| %>
  
    <tr>
        <td><%= order.created_at %></td>
