--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,22 @@
 <h1>注文履歴一覧</h1>
 
+<table>
+    <thead>
+        <tr>
+            <th>購入日時</th>
+            <th>購入者</th>
+            <th>注文個数</th>
+            <th>注文ステータス</th>
+        </tr>
+    </thead>
+    <% @order_details.each do |order| %>
+    <tbody>
+        <tr>
+            <td><%#= order.id.orders.created_at %></td>
+            <td><%#= order.order_id.customer_id %></td>
+            <td><%#= order.amount %></td>
+            <td><%= order.id.orders.status_i18n %></td>
+        </tr>
+    </tbody>
+    <% end %>
+</table>
