--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,12 @@
     
     <%= link_to "LOGO", root_path %>    
     
+    
+     <% if admin_signed_in? %>
+     
       <% if request.fullpath.include? "/admin" %>
-  <!--//admin側のheaderを返す-->
-        <% if admin_signed_in? %>
+        <!--//admin側のheaderを返す-->
+        <%# if admin_signed_in? %>
          <li>
              <%= link_to "商品一覧", admin_items_path %>
          </li>
@@ -33,8 +36,14 @@
          <li>
              <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
          </li>
-        <% else %>
-         <li>
+       <% else %>
+        <!--// user側のheaderを返す-->
+         <%= render 'layouts/customer_header' %>
+       <% end %>
+    <% elsif customer_signed_in? %>
+        <%= render 'layouts/customer_header' %>
+    <% else %>
+        <li>
              <%= link_to "About", about_path %>
          </li>
          <li>
@@ -46,22 +55,9 @@
          <li>
           <%= link_to "ログイン", new_customer_session_path %>
          </li>
-        <% end %>
-      <% else %>
-  <!--// user側のheaderを返す-->
-        <li>
-            <%= link_to "マイページ", customers_mypage_path %>
-        </li>
-        <li>
-            <%= link_to "商品一覧", items_path %>
-        </li>
-        <li>
-            <%= link_to "カート", cart_items_path %>
-        </li>
-        <li>
-            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
-      <% end %>
-     
+    <% end %>
+
+ 
     </header>
     <%= yield %>
   </body>
