--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -22,18 +22,16 @@
      <td><%= cart_item.item.name %></td>
      <td><%= cart_item.item.with_tax_price %></td>
      <td>
-      <%= form_with model: cart_item, url: cart_item_path(cart_item), method:  :patch do |f| %>
+      <%= form_with model: cart_item, url: cart_item_path(cart_item.id), method:  :patch do |f| %>
        <%= f.select :amount, *[1..10] %>
        <%= f.submit "変更" %>
-       <%#= @cart_items.amount %>
       <% end %>
      </td>
      <td>
       <%= cart_item.subtotal %>
-      
      </td>
      <td>
-      <%= link_to "削除する", cart_item_path(cart_item.id, cart_item), method: :delete %>
+      <%= link_to "削除する", cart_item_path(cart_item.id), method: :delete %>
      </td>
     </tr>
      <% total += cart_item.subtotal %>
