--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,2 +1,60 @@
-<h1>Public::Orders#show</h1>
-<p>Find me in app/views/public/orders/show.html.erb</p>
+<h1>注文履歴詳細</h1>
+
+<div>注文情報</div>
+
+<table>
+    <tr>
+        <th>注文日</th>
+        <td><%= @order.created_at %></td>
+    </tr>
+    <tr>
+        <th>配送先</th>
+        <td>
+            <%= "〒" + @order.shipping_postal_code.slice(0..2) + "-" + @order.shipping_postal_code.slice(3..6) %><br>
+            <%= @order.shipping_address %><br>
+            <%= @order.shipping_name %>
+        </td>
+    </tr>
+    <tr>
+        <th>支払方法</th>
+        <td><%= @order.payment_i18n %></td>
+    </tr>
+    <tr>
+        <th>ステータス</th>
+        <td><%= @order.status_i18n %></td>
+    </tr>
+</table>
+
+<div>請求情報</div>
+
+<table>
+    <tr>
+        <th>商品合計</th>
+        <td><%= @order.total_payment %></td>
+    </tr>
+    <tr>
+        <th>配送料</th>
+        <td><%= @order.shipping_cost %></td>
+    </tr>
+    <tr>
+        <th>ご請求額</th>
+        <td><%= @order.total_payment + @order.shipping_cost %></td>
+    </tr>
+</table>
+
+<div>注文内容</div>
+
+<table>
+    <tr>
+        <th>商品名</th>
+        <th>単価（税込）</th>
+        <th>個数</th>
+        <th>小計</th>
+    </tr>
+    
+    <% @orders.each do |f| %>
+    <tr>
+        <td><%= @orders.item_id %></td>
+    </tr>
+    <% end %>
+</table>
