--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -3,20 +3,33 @@
 <table>
     <thead>
         <tr>
-            <th>購入日時</th>
-            <th>購入者</th>
-            <th>注文個数</th>
-            <th>注文ステータス</th>
+            <th>注文日</th>
+            <th>配送先</th>
+            <th>注文商品</th>
+            <th>支払金額</th>
+            <th>ステータス</th>
+            <th>注文詳細</th>
         </tr>
     </thead>
-    <% @order_details.each do |order| %>
     <tbody>
+    <% @orders.each do |order| %>
+    
         <tr>
-            <td><%#= order.id.orders.created_at %></td>
-            <td><%#= order.order_id.customer_id %></td>
-            <td><%#= order.amount %></td>
-            <td><%= order.id.orders.status_i18n %></td>
+            <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
+            <td>
+                <%= "〒" + order.shipping_postal_code %><br>
+                <%= order.shipping_address %><br>
+                <%= order.shipping_name %>
+            </td>
+            <td>
+                <% order.order_details.each do |order_detail| %>
+                <%= order_detail.item.name %>
+                <% end %>
+            </td>
+            <td><%= order.total_payment + order.shipping_cost %></td>
+            <td><%= order.status_i18n %></td>
+            <td><%= link_to "表示する", order_path(order.id) %></td>
         </tr>
-    </tbody>
     <% end %>
+    </tbody>
 </table>
