--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,25 +1,35 @@
 <h1>注文履歴一覧</h1>
 
 <table>
-    <tr>
-        <th>注文日</th>
-        <th>配送先</th>
-        <th>注文商品</th>
-        <th>注文金額</th>
-        <th>ステータス</th>
-        <th>注文詳細</th>
-    </tr>
+    <thead>
+        <tr>
+            <th>注文日</th>
+            <th>配送先</th>
+            <th>注文商品</th>
+            <th>支払金額</th>
+            <th>ステータス</th>
+            <th>注文詳細</th>
+        </tr>
+    </thead>
+    <tbody>
+    <% @orders.each do |order| %>
     
- <% @orders.each do |order| %>
- 
-   <tr>
-       <td><%= order.created_at %></td>
-       <td><%= order.address %></td>
-       <td><%= order.item.name %></td>
-       <td><%= order.total_payment %></td>
-       <td><%= order.status %></td>
-       <td><%= order.payment %></td>
-       <td><%= link_to "表示する", order_path %></td>
-   </tr>
- <% end %>
+        <tr>
+            <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
+            <td>
+                <%= "〒" + order.shipping_postal_code %><br>
+                <%= order.shipping_address %><br>
+                <%= order.shipping_name %>
+            </td>
+            <td>
+                <% order.order_details.each do |order_detail| %>
+                <%= order_detail.item.name %>
+                <% end %>
+            </td>
+            <td><%= order.total_payment + order.shipping_cost %></td>
+            <td><%= order.status_i18n %></td>
+            <td><%= link_to "表示する", order_path(order.id) %></td>
+        </tr>
+    <% end %>
+    </tbody>
 </table>
