--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,2 +1,3 @@
 @use '~bootstrap/scss/bootstrap';
-@use '~@fontawesome/fontawesome-free/scss/fontawenome';
+// @use '~@fortawesome/fontawesome-free/scss/fontawesome';
+@use '~@fortawesome/fontawesome-free/scss/fontawesome';
