--- a/app/views/layouts/_customer_header.erb
+++ b/app/views/layouts/_customer_header.erb
@@ -1,14 +1,14 @@
          ようこそ、<%= current_customer.last_name %>さん！
          
-         <li>
-            <%= link_to "マイページ", customers_mypage_path %>
+         <li class="nav-item">
+            <%= link_to "マイページ", customers_mypage_path, class:'btn btn-outline-secondary nav-link text-darkbtn' %>
          </li>
-         <li>
-            <%= link_to "商品一覧", items_path %>
+         <li class="nav-item">
+            <%= link_to "商品一覧", items_path, class:'btn btn-outline-secondary nav-link text-dark' %>
          </li>
-         <li>
-            <%= link_to "カート", cart_items_path %>
+         <li class="nav-item">
+            <%= link_to "カート", cart_items_path, class:'btn btn-outline-secondary nav-link text-dark' %>
          </li>
-         <li>
-            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+         <li class="nav-item">
+            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class:'btn btn-outline-secondary nav-link text-dark' %>
          </li>
