--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,10 +1,21 @@
-<h1>ジャンル編集</h1>
-
-<%= form_with model: @genre, url: admin_genre_path(@genre.id) do |f| %> 
-
- <div>ジャンル名
- <%= f.text_field :name %>
- <%= f.submit '変更を保存' %>
- </div>
- 
-<% end %>
+<div class="container mx-auto">
+    <div class="row">
+        <div class="col-3 offset-md-1 text-center mb-3">
+        　<div class="text-dark" style="background-color:#DDDDDD">ジャンル編集</div>
+        </div>
+    </div>
+        
+    <div class="row">
+     　　<div class="col-2">
+     　　 <%= form_with model: @genre, url: admin_genre_path(@genre.id) do |f| %> 
+     　  <th>ジャンル名</th>
+     　  </div>
+     　  <div class="col-3">
+      　 <td><%= f.text_field :name %></td>
+      　 </div>
+      　 <div class="col-2">
+      　 <%= f.submit '変更を保存', class: "btn btn-success" %>
+      　 </div>
+       <% end %>
+    </div>
+</div>
