--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,25 +1,42 @@
-<h1>ジャンル一覧・追加</h1>
-
-<%= form_with model: @genre, url: "/admin/genres" do |f| %>
- <h4>ジャンル名</h4>
- <%= f.text_field :name %>
- <%= f.submit '新規登録' %>
-<% end %>
-
-<table>
- <thead>
-  <tr>
-   <th>ジャンル</th>
-  </tr>
- </thead>
-
- <tbody>
-  <% @genres.each do |genre| %>
-  
-  <tr>
-   <td><%= genre.name %></td>
-   <td><%= link_to "編集する", edit_admin_genre_path(genre.id) %></td>
-  </tr>
-  <% end %>
- </tbody>
-</table>
+<div class="container mx-auto">
+    <div class="row">
+        <div class="col-3 offset-md-1 text-center mb-3">
+        　<div class="text-dark" style="background-color:#DDDDDD">ジャンル一覧・追加</div>
+        </div>
+    </div>
+    <div class="row">
+     <div class="col-2">
+      <%= form_with model: @genre, url: "/admin/genres" do |f| %>
+      <th>ジャンル名</th>
+     </div>
+     <div class="col-3">
+      <td><%= f.text_field :name, placeholder:"ジャンル名", size: "20" %></td>
+     </div>
+     <div class-"col-2">
+      <%= f.submit '新規登録', class: "btn btn-success" %>
+      <% end %>
+     </div>
+   </div>
+   
+   <div class="row">
+    <div class="col-5">
+     <table class="table">
+      <thead class="thead" style="background-color:#DDDDDD">
+       <tr>
+        <th>ジャンル</th>
+        <th></th>
+       </tr>
+      </thead>
+    
+      <tbody>
+       <% @genres.each do |genre| %>
+       <tr>
+        <td><%= genre.name %></td>
+        <td><%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-success" %></td>
+       </tr>
+       <% end %>
+      </tbody>
+     </table>
+    </div>
+   </div>
+ </div>
