--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,35 +1,45 @@
-<h1>注文履歴一覧</h1>
+<div class="container mx-auto">
 
-<table>
-    <thead>
-        <tr>
-            <th>注文日</th>
-            <th>配送先</th>
-            <th>注文商品</th>
-            <th>支払金額</th>
-            <th>ステータス</th>
-            <th>注文詳細</th>
-        </tr>
-    </thead>
-    <tbody>
-    <% @orders.each do |order| %>
-    
-        <tr>
-            <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
-            <td>
-                <%= "〒" + order.shipping_postal_code %><br>
-                <%= order.shipping_address %><br>
-                <%= order.shipping_name %>
-            </td>
-            <td>
-                <% order.order_details.each do |order_detail| %>
-                <%= order_detail.item.name %>
-                <% end %>
-            </td>
-            <td><%= order.total_payment + order.shipping_cost %></td>
-            <td><%= order.status_i18n %></td>
-            <td><%= link_to "表示する", order_path(order.id) %></td>
-        </tr>
-    <% end %>
-    </tbody>
-</table>
+ <div class="row">
+    <div class="col-md-3 offset-md-1 text-center mb-3">
+        <div class="text-dark" style="background-color:#DDDDDD">注文履歴一覧</div>
+    </div>
+ </div>
+ 
+ <div class="row">
+        <div class="col-md-10 offset-md-1">
+            <table class="table">
+                <thead class="thead" style="background-color:#DDDDDD">
+                    <tr>
+                        <th>購入日時</th>
+                        <th>購入者</th>
+                        <th>注文個数</th>
+                        <th>注文ステータス</th>
+                    </tr>
+                </thead>
+                
+                <tbody>
+                    <% @orders.each do |order| %>
+                    <tr>
+                        <td><%= link_to admin_order_path(order.id) do %>
+                            <%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
+                            <% end %>
+                        </td>
+                        <td>
+                            <%= order.customer.last_name + " " + order.customer.first_name %>
+                        </td>
+                        <td>
+                            <% @total_amount = 0 %>
+                            <% order.order_details.each do |order_detail| %>
+                            <% @total_amount += order_detail.amount %>
+                            <% end %>
+                            <%= @total_amount %>
+                        </td>
+                        <td><%= order.status_i18n %></td>
+                    </tr>
+                    <% end %>
+                </tbody>
+            </table>
+        </div>
+ </div>
+</div>
